# libgrape

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in  toolchain-arm.cmake  version.h.in
.github/workflows/: cmake.yml
examples/load_bundle/: main.c
examples/loop_images/: main.c
ext/: ciallo_world.txt
include/: bundle_dump.h  bundle_load.h  gidf.h  grape.h  image.h  pixel.h
lib/: CMakeLists.txt  bundle_load.c  image.c
src/: bitmap.hpp  bundle.hpp  cli.c  exports.cpp  text.c  text.h
src/grape/: bitmap.hpp  bundle.hpp  exports.cpp
tests/: CMakeLists.txt  mock_bundle.h  mock_decompress.cpp  test_dump.cpp  test_grape.cpp  test_image.cpp  test_load.cpp  test_main.cpp
